# ubuntu-assist

./: README.md  config.example.toml  pyproject.toml  system_prompt.py  tools.py  ubuntu-assist.py
src/ubuntu_assist/: cli.py  system_prompt.py  tools.py
